# sp-web

./: index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config_store.rs  database.rs  error.rs  main.rs  mapper.rs  partner_handler.rs  security.rs  security_handler.rs
src/api/accounts/: customers.ts  merchants.ts
src/api/auth/: auth.ts  registration.ts  user.ts
src/api/dashboard/: api.ts
src/api/payments/: accounts.ts
src/api/transactions/: beneficiaries.ts  settlements.ts  transaction.ts
src/components/Action/: ActionButton.svelte  ActionButtonWrapper.svelte
src/components/Avatar/: MiniAvatar.svelte
src/components/BottomBar/: BottomBar.svelte
src/components/Button/: AddButton.svelte  Button.svelte  LogoutButton.svelte  OutlineButton.svelte
src/components/Card/: AuthCard.svelte  DashboardCard.svelte  DashboardDataCard.svelte  DashboardTrxCard.svelte  IDCard.svelte
src/components/Chart/: Chart.svelte
src/components/Header/: SortingHeaderButton.svelte
src/components/Icons/: Add.svelte  AlertCircle.svelte  Archive.svelte  Bell.svelte  (+23 more)
src/constant/: constant.ts  navbar.ts  option.ts  routes.ts  schema.ts
src/interfaces/: api.interface.ts  auth.interface.ts  dashboard.interface.ts  data.interface.ts  nav.interfaces.ts  security.interface.ts  ui.interfaces.ts
src/lib/: Greet.svelte
src/locales/: id.json
src/options/: createAccountOptions.ts
src/routes/: +page.svelte
src/stores/: account.ts  auth.ts  createAddModal.ts  createBulkDeleteHandler.ts  createEditModal.ts  createLogout.ts  createModal.ts  createMutationEditForm.ts  createMutationForm.ts  createPaginatedQuery.ts  createRoleAccessor.ts  createValidateModal.ts  navStore.ts  pageName.ts  useSvelteTable.ts
src/utils/: authQuery.ts  dirUtils.ts  headerUtils.ts  queryUtils.ts  secureAuthQuery.ts  unAuthQuery.ts  utils.ts
(+75 files in other folders)
