[package]
name = "stellar-payment"
version = "0.2.0"
description = "an app. (beta)"
authors = ["Lynnette Fuyuna"]
license = "MIT"
repository = "github.com/stellar-payment/sp-web"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
p256 = {version = "0.13.2", features = ["std", "arithmetic", "ecdh"], default-features = false }
aes = {version = "0.8.3", default-features = false}
cbc = {version = "0.1.2", features = ["block-padding", "alloc"], default-features = false}
hmac = {version = "0.12.1", default-features = false}
sha2 = {version = "0.10.7", default-features = false}
hkdf = {version = "0.12.3", default-features = false}
thiserror = "1.0.40"
axum = { version = "0.6.3", features = ["json", "tokio"] }
rand_core = {version = "0.6.4", default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "protocol-asset", "fs-all", "path-all", "devtools"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
portpicker = "0.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.24.2", features = ["full"], default-features = false }
data-encoding = {version = "2.4.0", default-features = false, features= ["alloc"] }
anyhow = { version = "1.0", default-features = false }
rand = "0.8.5"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
